--- a/ExercicioContador/app/src/main/res/values/strings.xml
+++ b/ExercicioContador/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ExercicioContador</string>
+    <string name="zero">0</string>
+    <string name="menos">-</string>
+    <string name="mais">+</string>
 </resources>
